FLAS-16 Add SecurityControllerTest

--- a/translations/security.pl.yaml
+++ b/translations/security.pl.yaml
@@ -1,4 +1,4 @@
-Invalid credentials.: Nieprawidłowe dane uwierzytelniające
+Invalid credentials.: Nieprawidłowe dane uwierzytelniające.
 Login: Login
 Password: Hasło
 Sign in: Zaloguj się
